--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   google_fonts: ^4.0.4
   carousel_slider: ^4.0.0
+  scroll_loop_auto_scroll: ^0.0.5
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -61,6 +62,7 @@ flutter:
   assets:
     - assets/images/
     - assets/gifs/
+    - assets/svg/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
