--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   google_fonts: ^4.0.4
   carousel_slider: ^4.0.0
   scroll_loop_auto_scroll: ^0.0.5
+  flutter_svg: ^2.0.7
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
