--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -61,8 +61,11 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/images/community_logos/
+    - assets/images/awards/
     - assets/gifs/
     - assets/svg/
+    - assets/svg/social_media_logos/
 
   fonts:
     - family: Inter
